course prerequisites condition, updated StudentDto, courseDto