@@ -11,11 +11,13 @@ public class StudentMapper {
 
     public static List<StudentDto> studentListToDTOs(List<Student> students) {
         return students==null? new ArrayList<>() : students.stream()
-                .map(c->studentToDTO(c))
-                .collect(Collectors.toList());
+                .map(StudentMapper::studentToDTO)
+                .toList();
     }
 
     public static StudentDto studentToDTO(Student student){
-        return new StudentDto(student.getId(), student.getFirstName(), student.getLastName(), student.getPhone(), student.getCreationDate()) ;
+        return new StudentDto(student.getId(), student.getFirstName(), student.getLastName(), student.getPhone(), student.getCreationDate()
+                , student.getCourses().size()>0 ? student.getCourses().stream().map(CourseMapper::courseToDTO )
+                .collect(Collectors.toList()) : new ArrayList<>()) ;
     }
 }
